# NexusTrader-mcp

./: .gitignore  CHANGELOG.md  DESIGN.md  README.md  config.yaml.template  nexustrader-mcp-sse.service  pyproject.toml
.claude/: mcp.json
.codex/: config.toml
.cursor/: mcp.json
.keys/: .secrets.toml.template
docs/: conf.py  getting-started.md  index.md  openclaw.md  publishing.md  release-notes.md  requirements.txt  troubleshooting.md
nexustrader_mcp/: __init__.py  __main__.py  cli.py  config.py  engine_manager.py  mcp_strategy.py  serializers.py  server.py
nexustrader_mcp/tools/: account.py  info.py  market.py  position.py  trading.py
openclaw/: BOOT.md  README.md  SKILL.md  bridge.py  install.sh  nexustrader-mcp-sse.service  nexustrader_daemon.sh
skills/: balance.md  cancel.md  exchanges.md  market.md  orders.md  portfolio.md  positions.md  trade.md
tests/: TEST_RESULTS.md  test_mcp_tools.py
