[project]
name = "nexustrader-mcp"
version = "0.1.1"
description = "MCP server for NexusTrader — expose trading, market data, and account tools to AI clients"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastmcp>=2.0",
    "pandas>=1.5",
    "pyyaml>=6.0",
    "nexustrader>=0.3.23",
    "pydantic>=2.0",
    "click>=8.0",
]

[project.scripts]
nexustrader-mcp = "nexustrader_mcp.cli:cli_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


